[package]
name = "scraper"
version = "0.1.0"
authors = ["Ryan McGrath <ryan@rymc.io>"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
diesel = { version = "1.3.0", features = ["postgres", "chrono", "serde_json"] }
reqwest = "0.8.5"
sentry = "0.5.1"
dotenv = "0.9.0"
chrono = "0.4.2"
rand = "0.5.0"
